--- a/README.adoc
+++ b/README.adoc
@@ -36,9 +36,18 @@ image::images/Screenshot at Sep 25 23-54-06.png[]
 
 GitLab -> 127.0.0.1:80
 
+image::images/Screenshot at Sep 26 00-13-46.png[]
+
+
 Jenkins -> 127.0.0.1:8080
 
+image::images/Screenshot at Sep 26 00-14-06.png[]
+
+
 MySQL -> jdbc:mysql://localhost:3306/sakila
+
+image::images/Screenshot at Sep 26 00-15-14.png[]
+
 
 containers are connected by network aliases so if you would like to
 connect from jenkins to gitlab you can use alias in url
