--- a/README.adoc
+++ b/README.adoc
@@ -34,17 +34,17 @@ image::images/Screenshot at Sep 25 23-54-06.png[]
 
 ## URLS
 
-GitLab -> 127.0.0.1:80
+*GitLab -> 127.0.0.1:80*
 
 image::images/Screenshot at Sep 26 00-13-46.png[]
 
 
-Jenkins -> 127.0.0.1:8080
+*Jenkins -> 127.0.0.1:8080*
 
 image::images/Screenshot at Sep 26 00-14-06.png[]
 
 
-MySQL -> jdbc:mysql://localhost:3306/sakila
+*MySQL -> jdbc:mysql://localhost:3306/sakila*
 
 image::images/Screenshot at Sep 26 00-15-14.png[]
 
